--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,2 @@
-REACT_APP_API_URL=http://localhost:8080
+//REACT_APP_API_URL=http://localhost:8080
+REACT_APP_API_URL=https://csc3916-assignment3-lennythepenny.onrender.com
